# dobble

./: .codeclimate.yml  .coveragerc  .gitignore  .pylintrc  README.md  find_duplicates.py  organize_emojis.py  pyproject.toml  remove_duplicates.py  setup_openmoji.py
.github/workflows/: pylint.yml  python-package.yml
data/openmoji/: openmoji.json  openmoji_restructured.json
data/packing_data/ccib/: ccib10.txt  ccib12.txt  ccib13.txt  ccib14.txt  ccib15.txt  ccib16.txt  ccib17.txt  ccib18.txt  ccib19.txt  ccib23.txt  ccib26.txt  ccib27.txt  ccib28.txt  ccib29.txt  ccib30.txt  ccib31.txt  ccib32.txt  ccib33.txt  ccib35.txt  ccib37.txt  ccib39.txt  ccib40.txt  ccib41.txt  ccib45.txt  ccib46.txt  ccib47.txt  ccib48.txt  ccib50.txt  ccib7.txt  ccib9.txt
data/packing_data/ccic/: ccic13.txt  ccic14.txt  ccic18.txt  ccic20.txt  ccic24.txt  ccic26.txt  ccic28.txt  ccic29.txt  ccic30.txt  ccic33.txt  ccic38.txt  ccic40.txt  ccic44.txt  ccic45.txt  ccic48.txt  ccic49.txt  ccic5.txt  ccic6.txt  ccic9.txt
data/packing_data/ccir/: ccir14.txt  ccir15.txt  ccir17.txt  ccir18.txt  ccir20.txt  ccir21.txt  ccir22.txt  ccir24.txt  ccir28.txt  ccir29.txt  ccir31.txt  ccir32.txt  ccir33.txt  ccir34.txt  ccir36.txt  ccir37.txt  ccir38.txt  ccir39.txt  ccir40.txt  ccir46.txt  ccir47.txt  ccir48.txt  ccir5.txt  ccir50.txt  ccir6.txt  ccir7.txt  ccir8.txt
data/packing_data/ccis/: ccis14.txt  ccis15.txt  ccis16.txt  ccis17.txt  ccis23.txt  ccis24.txt  ccis27.txt  ccis28.txt  ccis29.txt  ccis30.txt  ccis31.txt  ccis36.txt  ccis39.txt  ccis40.txt  ccis43.txt  ccis47.txt  ccis48.txt  ccis5.txt  ccis6.txt  ccis8.txt  radius.txt
data/packings/cci/: radius.txt
dobble/: __init__.py  card.py  constants.py  dobble.py  emoji.py  packing.py  packings.py  planes.py  utils.py  visual.py
tests/: test_card.py  test_emoji.py  test_packing.py  test_packings.py  test_planes.py  test_utils.py  test_visual.py
tutorials/: cards_examples.ipynb  cards_projects.ipynb  utils.py
(+91 files in other folders)
