[tool.poetry]
name = "dobble"
version = "0.1.0"
description = "A Python package for generating individual Dobble playing cards and full decks with customizable emojis and layouts."
authors = ["Marvin Theiss <mrvnthss@mail.de>"]
license = "GNU General Public License v3.0"
readme = "README.md"
include = ["data/*"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pillow = "^10.1.0"
pandas = "^2.1.4"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
